# muon

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: CMakeLists.txt  config.cpp  config.hpp  inference.hpp  main.cpp  math_cpu.cpp  math_cpu.hpp  memory_map.cpp  memory_map.hpp  model.cpp  model.hpp  safetensors.cpp  safetensors.hpp  tensor.cpp  tensor.hpp  tokenizer.cpp  tokenizer.hpp  types.hpp  utils.hpp
src/app/: CMakeLists.txt  main.cpp
src/backends/: CMakeLists.txt
src/backends/cpu/: CMakeLists.txt  math_cpu.cpp  math_cpu.hpp
src/backends/sycl/: CMakeLists.txt  ops_sycl.cpp  ops_sycl.hpp  rmsnorm.cpp  softmax.cpp
src/core/: CMakeLists.txt  config.cpp  config.hpp  inference.cpp  memory_map.cpp  memory_map.hpp  model.cpp  model.hpp  safetensors.cpp  safetensors.hpp  sample.cpp  tensor.hpp  tokenizer.cpp  tokenizer.hpp  types.hpp  utils.cpp
src/models/: qwen3.hpp
